# shaders_shapes

./: tips.md
GameOf/: Game.html  autoptimize.css  autoptimize.js  game-of-thrones-piano-easy
GameOf/osmd/: opensheetmusicdisplay.min.js  opensheetmusicdisplay.min.js.map  osmd.index.html
PixelSpirit-header/: index.html  index.json
PixelSpirit-header/src/: main.js
recursivearts.com/: index.html  scripts
recursivearts.com/online-guitar/: index.html
recursivearts.com/online-guitar/TemplateData/: UnityProgress.js  UnityProgress.js.html  guitarstyle_min.css
recursivearts.com/online-guitar/js/: guitarfunctions.js
recursivearts.com/virtual-piano/: error-loading-piano.html  faq.html  index.html  keyboard-ghosting.html  keymapping.html  my-recordings.html  piano-game.html  piano-has-no-sound.html  song-mode.html
recursivearts.com/virtual-piano/TemplateData100/: UnityProgress.js.html  pianostyle01.css  pianostyle04.css
recursivearts.com/virtual-piano/js/: extrafunctions-8-min.js
recursivearts.com/virtual-piano/songs/: Air.json  CanonPachelbel.json  FurElise.json  Greensleeves.json  Gymnopedie1.json  Gymnopedie3.json  HappyBirthday.json  Menuet.json  (+26 more)
static-server/: README.md  cert.pem
static-server/static/: gl-renderer2019.js
taiji/: .gitignore  .rsw.json  package.json  vite.config.ts
taiji/.cert/: key.pem
taiji/shader/: try1.glsl  try2.glsl  try3.glsl  try4.glsl  try5.glsl  try6.glsl  try7.glsl  try8.glsl
taiji/src/: App.vue
taiji/wasm_taiji/: Cargo.toml  readme.md
taiji/wasm_taiji/src/: lib.rs
tool-data/: book.html
tool-data/book/: main.js
(+48 files in other folders)
