[package]
name = "wasm_taiji"
version = "0.1.0"
authors = ["Smile921"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
nalgebra-glm = "0.15.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window",
  "XrSession",
  "XrWebGlLayer"
]
